--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "Jaimin Detroja",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.9",
+    "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.2.4"
+    "mongoose": "^8.3.3",
+    "nodemon": "^3.1.0"
   }
 }
