--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
+    "joi": "^17.13.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.3",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "sweetalert2": "^11.10.8"
   }
 }
