--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   "author": "Jaimin Detroja",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "joi": "^17.13.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.3",
     "nodemon": "^3.1.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "sweetalert2": "^11.6.13"
   }
 }
