--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.13.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
