--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Jaimin Detroja",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
@@ -20,6 +22,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.3.3",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
