--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "engines": {
     "node": "20.16.0"
   },
-  "name": "Wanderlust",
+  "name": "wanderlust",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
