--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "redis": "^4.6.15",
+    "socket.io": "^4.8.0",
     "sweetalert2": "^11.6.13"
   }
 }
