--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "redis": "^4.6.15",
     "socket.io": "^4.8.0",
     "sweetalert2": "^11.6.13"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.13"
   }
 }
