before fire base

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,8 @@
-VUE_APP_BACKEND_URL=http://localhost:3000
+VITE_API_BASE_URL=http://localhost:3000
+FIREBASE_API_KEY=AIzaSyCosreXmiQQZDykbXUw8NMY7btZAmPwOjc
+FIREBASE_AUTH_DOMAIN=wanderlust-47c1e.firebaseapp.com
+FIREBASE_PROJECT_ID=wanderlust-47c1e
+FIREBASE_STORAGE_BUCKET=wanderlust-47c1e.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=586869119269
+FIREBASE_APP_ID=1:586869119269:web:8ad8b487960c1fb2b922cc
+FIREBASE_MEASUREMENT_ID=G-9P0V2BSBYJ
