--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,14 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-brands-svg-icons": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/react-fontawesome": "^0.2.2",
+        "axios": "^1.7.7",
+        "dotenv": "^16.4.5",
+        "firebase": "^10.14.1",
+        "firebaseui": "^6.1.0",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
