--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
   "author": "Jaimin Detroja",
   "license": "ISC",
   "dependencies": {
+    "@firebase/auth": "^1.7.9",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "connect-redis": "^7.1.1",
@@ -22,6 +23,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "firebase": "^10.14.1",
     "joi": "^17.13.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.3",
