--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,12 +15,14 @@
         "@fortawesome/free-brands-svg-icons": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "appwrite": "^16.0.2",
         "axios": "^1.7.7",
         "dotenv": "^16.4.5",
         "firebase": "^10.14.1",
         "firebaseui": "^6.1.0",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
+        "react-client-session": "^0.0.8",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.26.2",
         "vue-sweetalert2": "^5.0.11"
