--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "wanderlust",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
-  },
-  "keywords": [],
-  "author": "Jaimin Detroja",
-  "license": "ISC",
-  "dependencies": {
-    "@firebase/auth": "^1.7.9",
-    "cloudinary": "^1.41.3",
-    "connect-flash": "^0.1.1",
-    "connect-redis": "^7.1.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "ejs-mate": "^4.0.0",
-    "express": "^4.19.2",
-    "express-session": "^1.18.0",
-    "firebase": "^10.14.1",
-    "joi": "^17.13.1",
-    "method-override": "^3.0.0",
-    "mongoose": "^8.3.3",
-    "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
-    "nodemon": "^3.1.3",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0",
-    "redis": "^4.6.15",
-    "socket.io": "^4.8.0",
-    "sweetalert2": "^11.6.13"
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.4.13"
-  }
+    "name": "wanderlust",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon app.js",
+        "dev": "nodemon app.js"
+    },
+    "keywords": [],
+    "author": "Jaimin Detroja",
+    "license": "ISC",
+    "dependencies": {
+        "@firebase/auth": "^1.7.9",
+        "cloudinary": "^1.41.3",
+        "connect-flash": "^0.1.1",
+        "connect-redis": "^7.1.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "ejs": "^3.1.10",
+        "ejs-mate": "^4.0.0",
+        "express": "^4.19.2",
+        "express-session": "^1.18.0",
+        "firebase": "^10.14.1",
+        "joi": "^17.13.1",
+        "method-override": "^3.0.0",
+        "mongoose": "^8.3.3",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
+        "nodemon": "^3.1.3",
+        "passport": "^0.7.0",
+        "passport-local": "^1.0.0",
+        "passport-local-mongoose": "^8.0.0",
+        "redis": "^4.6.15",
+        "socket.io": "^4.8.0",
+        "sweetalert2": "^11.6.13"
+    },
+    "devDependencies": {
+        "tailwindcss": "^3.4.13"
+    }
 }
