--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,12 +11,17 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@cloudinary/react": "^1.13.1",
+        "@cloudinary/url-gen": "^1.21.0",
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
         "@fortawesome/free-brands-svg-icons": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@heroicons/react": "^2.1.5",
+        "@material-tailwind/react": "^2.1.10",
         "appwrite": "^16.0.2",
         "axios": "^1.7.7",
+        "cloudinary": "^2.5.1",
         "dotenv": "^16.4.5",
         "firebase": "^10.14.1",
         "firebaseui": "^6.1.0",
