--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,7 +12,7 @@
     "author": "Jaimin Detroja",
     "license": "ISC",
     "dependencies": {
-        "@firebase/auth": "^1.7.9",
+        "@firebase/app-compat": "^0.2.45",
         "cloudinary": "^1.41.3",
         "connect-flash": "^0.1.1",
         "connect-redis": "^7.1.1",
@@ -23,8 +23,7 @@
         "ejs-mate": "^4.0.0",
         "express": "^4.19.2",
         "express-session": "^1.18.0",
-        "firebase": "^10.14.1",
-        "firebase-admin": "^12.7.0",
+        "firebase": "^11.0.1",
         "joi": "^17.13.1",
         "method-override": "^3.0.0",
         "mongoose": "^8.3.3",
