change env veriables for production

--- a/.github/workflows/react_wanderlust.yml
+++ b/.github/workflows/react_wanderlust.yml
@@ -5,6 +5,8 @@ on:
     push:
         branches:
             - react
+        paths:
+            - "./Backend/**"
     workflow_dispatch:
 
 jobs:
