main change : add all loaders ; fix review bug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "Pacman",
         "redns",
         "resave",
+        "setsubmit",
         "signup",
         "Swal",
         "sweetalert"
