--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,50 +1,68 @@
 {
-    "name": "forontend",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "proxy": "http://localhost:3000",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "lint": "eslint .",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "@cloudinary/react": "^1.13.1",
-        "@cloudinary/url-gen": "^1.21.0",
-        "@fortawesome/fontawesome-svg-core": "^6.6.0",
-        "@fortawesome/free-brands-svg-icons": "^6.6.0",
-        "@fortawesome/free-solid-svg-icons": "^6.6.0",
-        "@fortawesome/react-fontawesome": "^0.2.2",
-        "@heroicons/react": "^2.1.5",
-        "@material-tailwind/react": "^2.1.10",
-        "appwrite": "^16.0.2",
-        "axios": "^1.7.7",
-        "cloudinary": "^2.5.1",
-        "dotenv": "^16.4.5",
-        "firebase": "^10.14.1",
-        "firebaseui": "^6.1.0",
-        "prop-types": "^15.8.1",
-        "react": "^18.3.1",
-        "react-client-session": "^0.0.8",
-        "react-dom": "^18.3.1",
-        "react-router-dom": "^6.26.2",
-        "vue-sweetalert2": "^5.0.11"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.12.0",
-        "@types/react": "^18.3.10",
-        "@types/react-dom": "^18.3.0",
-        "@vitejs/plugin-react": "^4.3.2",
-        "autoprefixer": "^10.4.20",
-        "eslint": "^9.12.0",
-        "eslint-plugin-react": "^7.37.1",
-        "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-        "eslint-plugin-react-refresh": "^0.4.12",
-        "globals": "^15.11.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
-        "vite": "^5.4.8"
-    }
+  "name": "forontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "proxy": "http://localhost:3000",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "dependencies": {
+    "@cloudinary/react": "^1.13.1",
+    "@cloudinary/url-gen": "^1.21.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.10",
+    "appwrite": "^16.0.2",
+    "axios": "^1.7.7",
+    "cloudinary": "^2.5.1",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.14.1",
+    "firebaseui": "^6.1.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-client-session": "^0.0.8",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "react-spinners": "^0.14.1",
+    "vue-sweetalert2": "^5.0.11"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.2",
+    "@eslint/js": "^9.12.0",
+    "@storybook/addon-essentials": "^8.4.2",
+    "@storybook/addon-interactions": "^8.4.2",
+    "@storybook/addon-onboarding": "^8.4.2",
+    "@storybook/blocks": "^8.4.2",
+    "@storybook/react": "^8.4.2",
+    "@storybook/react-vite": "^8.4.2",
+    "@storybook/test": "^8.4.2",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.12.0",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-plugin-storybook": "^0.11.0",
+    "globals": "^15.11.0",
+    "postcss": "^8.4.47",
+    "storybook": "^8.4.2",
+    "tailwindcss": "^3.4.13",
+    "vite": "^5.4.8"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
+  }
 }
