--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,10 +28,12 @@
     "firebase": "^10.14.1",
     "firebaseui": "^6.1.0",
     "js-cookie": "^3.0.5",
+    "mui": "^0.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-client-session": "^0.0.8",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.2",
     "react-spinners": "^0.14.1",
     "vue-sweetalert2": "^5.0.11"
