--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "@rive-app/react-canvas": "^4.16.5",
     "appwrite": "^16.0.2",
     "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
