--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
         "@heroicons/react": "^2.1.5",
         "@material-tailwind/react": "^2.1.10",
         "@rive-app/react-canvas": "^4.16.5",
+        "@tabler/icons-react": "^3.26.0",
         "axios": "^1.7.7",
         "cloudinary": "^2.5.1",
         "crypto-js": "^4.2.0",
